fix desc and summ

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,9 +1,9 @@
 name:  bomberic2
 title:  Bomberic 2
 version: "1.0"
-summary:   Update to the arcade classic
+summary:  Great action game
 description: |
-  Update to the arcade classic
+  Great action game
 
 grade: stable
 icon: bomberic2_icon.png
